# kgrep

./: .gitignore  LICENSE  README.md  pyproject.toml
kgrep/: __init__.py  __main__.py  kgrep.py
